--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.14.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
