--- a/14-airbnb-mongodb-with-mongoose/package.json
+++ b/14-airbnb-mongodb-with-mongoose/package.json
@@ -21,12 +21,14 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.11.4"
   }
 }
